Add doctests; fix 'bsToActiveLow' to behave like Linux sysfs.

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -144,6 +144,15 @@ Executable gpio-reader-example
   Default-Language:     Haskell2010
   Ghc-Options:          -Wall -threaded
 
+Test-Suite doctest
+  Type:                 exitcode-stdio-1.0
+  Default-Language:     Haskell2010
+  Hs-Source-Dirs:       test
+  Ghc-Options:          -Wall -threaded
+  Main-Is:              doctest.hs
+  Build-Depends:        base
+                      , doctest
+                      , filepath
 
 Test-Suite spec
   Type:                 exitcode-stdio-1.0
