--- a/.travis.yml
+++ b/.travis.yml
@@ -116,7 +116,7 @@ script:
 - |
   case "$BUILD" in
     stack)
-      stack --no-terminal $ARGS test --haddock --no-haddock-deps
+      stack --no-terminal $ARGS test --haddock --no-haddock-deps --ghc-options="-Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -Werror"
       ;;
     cabal)
       cabal configure --enable-tests --enable-benchmarks -v2 --ghc-options="-O0 -Werror"
