--- a/gpio.cabal
+++ b/gpio.cabal
@@ -87,35 +87,35 @@ Library
                       , Trustworthy
                       , TypeSynonymInstances
                       , UndecidableInstances
-  Build-Depends:        QuickCheck
-                      , base ==4.*
-                      , base-compat
-                      , bytestring
-                      , containers
-                      , directory
-                      , exceptions
-                      , filepath
-                      , inline-c
-                      , mtl
-                      , mtl-compat
-                      , text
-                      , transformers
-                      , transformers-compat
-                      , unix
-                      , unix-bytestring
+  Build-Depends:        QuickCheck          >= 2.7.6
+                      , base                >= 4.7.0
+                      , base-compat         >= 0.6.0
+                      , bytestring          >= 0.10.4
+                      , containers          >= 0.5.5
+                      , directory           >= 1.2.1
+                      , exceptions          >= 0.8.0
+                      , filepath            >= 1.3.0
+                      , inline-c            >= 0.5.5
+                      , mtl                 >= 2.1.3
+                      , mtl-compat          >= 0.2.1
+                      , text                >= 1.2.0
+                      , transformers        >= 0.3.0
+                      , transformers-compat >= 0.4.0
+                      , unix                >= 2.7.0
+                      , unix-bytestring     >= 0.3.7
   C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
   CC-Options:           -Wall
 
 Executable gpio-sysfs-example
   Main-Is:              Sysfs.hs
   HS-Source-Dirs:       examples
-  Build-Depends:        base ==4.*
-                      , async
+  Build-Depends:        base
+                      , async                >= 2.0.2
                       , base-compat
                       , gpio
                       , mtl
                       , mtl-compat
-                      , optparse-applicative
+                      , optparse-applicative >= 0.11.0
                       , transformers
                       , transformers-compat
   Default-Language:     Haskell2010
@@ -124,7 +124,7 @@ Executable gpio-sysfs-example
 Executable gpio-example
   Main-Is:              Gpio.hs
   HS-Source-Dirs:       examples
-  Build-Depends:        base ==4.*
+  Build-Depends:        base
                       , async
                       , base-compat
                       , exceptions
@@ -141,7 +141,7 @@ Executable gpio-example
 Executable gpio-reader-example
   Main-Is:              GpioReader.hs
   HS-Source-Dirs:       examples
-  Build-Depends:        base ==4.*
+  Build-Depends:        base
                       , async
                       , base-compat
                       , exceptions
@@ -189,7 +189,7 @@ Test-Suite spec
   Ghc-Options:          -Wall -threaded
   Main-Is:              Main.hs
   Build-Depends:        QuickCheck
-                      , base ==4.*
+                      , base
                       , async
                       , base-compat
                       , bytestring
@@ -197,7 +197,7 @@ Test-Suite spec
                       , directory
                       , exceptions
                       , filepath
-                      , hspec
+                      , hspec               >= 2.1.7
                       , inline-c
                       , mtl
                       , mtl-compat
