--- a/gpio.cabal
+++ b/gpio.cabal
@@ -76,6 +76,7 @@ Library
                       , FunctionalDependencies
                       , GADTs
                       , GeneralizedNewtypeDeriving
+                      , InterruptibleFFI
                       , KindSignatures
                       , LambdaCase
                       , MultiParamTypeClasses
@@ -95,7 +96,6 @@ Library
                       , directory           >= 1.2.1
                       , exceptions          >= 0.8.0
                       , filepath            >= 1.3.0
-                      , inline-c            >= 0.5.5
                       , mtl                 >= 2.1.3
                       , mtl-compat          >= 0.2.1
                       , text                >= 1.2.0
@@ -103,7 +103,7 @@ Library
                       , transformers-compat >= 0.4.0
                       , unix                >= 2.7.0
                       , unix-bytestring     >= 0.3.7
-  C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
+  C-Sources:            src/System/GPIO/Linux/Sysfs/pollSysfs.c
   CC-Options:           -Wall
 
 Executable gpio-sysfs-example
@@ -198,7 +198,6 @@ Test-Suite spec
                       , exceptions
                       , filepath
                       , hspec               >= 2.1.7
-                      , inline-c
                       , mtl
                       , mtl-compat
                       , text
@@ -218,7 +217,7 @@ Test-Suite spec
                       , System.GPIO.Monad
                       , System.GPIO.Tutorial
                       , System.GPIO.Types
-  C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
+  C-Sources:            src/System/GPIO/Linux/Sysfs/pollSysfs.c
   If flag(linux-bbone-tests)
     cpp-options: -DRUN_LINUX_BBONE_TESTS=1
 
