--- a/gpio.cabal
+++ b/gpio.cabal
@@ -89,21 +89,21 @@ Library
                       , Trustworthy
                       , TypeSynonymInstances
                       , UndecidableInstances
-  Build-Depends:        QuickCheck          >= 2.7.6
-                      , base                >= 4.7.0
-                      , base-compat         >= 0.6.0
-                      , bytestring          >= 0.10.4
-                      , containers          >= 0.5.5
-                      , directory           >= 1.2.1
-                      , exceptions          >= 0.8.0
-                      , filepath            >= 1.3.0
-                      , mtl                 >= 2.1.3
-                      , mtl-compat          >= 0.2.1
-                      , text                >= 1.2.0
-                      , transformers        >= 0.3.0
-                      , transformers-compat >= 0.4.0
-                      , unix                >= 2.7.0
-                      , unix-bytestring     >= 0.3.7
+  Build-Depends:        QuickCheck          >= 2.7.6  && < 2.9
+                      , base                >= 4.7.0  && < 5
+                      , base-compat         >= 0.6.0  && < 1
+                      , bytestring          >= 0.10.4 && < 0.11
+                      , containers          >= 0.5.5  && < 0.6
+                      , directory           >= 1.2.1  && < 1.3
+                      , exceptions          >= 0.8.0  && < 1
+                      , filepath            >= 1.3.0  && < 1.5
+                      , mtl                 >= 2.1.3  && < 2.3
+                      , mtl-compat          >= 0.2.1  && < 0.3
+                      , text                >= 1.2.0  && < 1.3
+                      , transformers        >= 0.3.0  && < 0.6
+                      , transformers-compat >= 0.4.0  && < 1
+                      , unix                >= 2.7.0  && < 2.8
+                      , unix-bytestring     >= 0.3.7  && < 0.4
   C-Sources:            src/System/GPIO/Linux/Sysfs/pollSysfs.c
   CC-Options:           -Wall
 
@@ -111,12 +111,12 @@ Executable gpio-sysfs-example
   Main-Is:              Sysfs.hs
   HS-Source-Dirs:       examples
   Build-Depends:        base
-                      , async                >= 2.0.2
+                      , async                >= 2.0.2  && < 2.2
                       , base-compat
                       , gpio
                       , mtl
                       , mtl-compat
-                      , optparse-applicative >= 0.11.0
+                      , optparse-applicative >= 0.11.0 && < 0.13
                       , transformers
                       , transformers-compat
   Default-Language:     Haskell2010
@@ -204,7 +204,7 @@ Test-Suite spec
                       , directory
                       , exceptions
                       , filepath
-                      , hspec               >= 2.1.7
+                      , hspec               >= 2.1.7 && < 2.3
                       , mtl
                       , mtl-compat
                       , text
