Add GHC 8 forward compatibility options.
Per https://ghc.haskell.org/trac/ghc/wiki/Migration/8.0#Librarychanges

--- a/gpio.cabal
+++ b/gpio.cabal
@@ -62,7 +62,7 @@ Library
   HS-Source-Dirs:       src
   GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
   If impl(ghc > 8)
-    GHC-Options:        -fno-warn-redundant-constraints
+    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
   Exposed-Modules:      System.GPIO
                       , System.GPIO.Linux
                       , System.GPIO.Linux.Sysfs
@@ -151,7 +151,7 @@ Executable gpio-example
   Default-Language:     Haskell2010
   Ghc-Options:          -Wall -threaded
   If impl(ghc > 8)
-    GHC-Options:        -fno-warn-redundant-constraints
+    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
 
 Executable gpio-reader-example
   Main-Is:              GpioReader.hs
@@ -173,7 +173,7 @@ Executable gpio-reader-example
   Default-Language:     Haskell2010
   Ghc-Options:          -Wall -threaded
   If impl(ghc > 8)
-    GHC-Options:        -fno-warn-redundant-constraints
+    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
 
 Test-Suite hlint
   Type:                 exitcode-stdio-1.0
@@ -208,7 +208,7 @@ Test-Suite spec
                       , test
   Ghc-Options:          -Wall -threaded
   If impl(ghc > 8)
-    GHC-Options:        -fno-warn-redundant-constraints
+    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
   Main-Is:              Main.hs
   Build-Depends:        QuickCheck
                       , base
