--- a/hpio.cabal
+++ b/hpio.cabal
@@ -1,5 +1,5 @@
 Name:                   hpio
-Version:                0.8.0.5
+Version:                0.8.0.6
 Cabal-Version:          >= 1.10
 Build-Type:             Simple
 Author:                 Drew Hess <src@drewhess.com>
@@ -220,7 +220,7 @@ Test-Suite spec
                       , directory
                       , exceptions
                       , filepath
-                      , hspec               >= 2.1.7 && < 2.4
+                      , hspec               >= 2.1.7
                       , mtl
                       , mtl-compat
                       , text
@@ -257,4 +257,4 @@ Source-Repository head
 Source-Repository this
   Type:                 git
   Location:             git://github.com/dhess/hpio.git
-  Tag:                  v0.8.0.5
+  Tag:                  v0.8.0.6
